--- a/10-表单.html
+++ b/10-表单.html
@@ -288,6 +288,7 @@
             
             <button type="submit">上传文件</button>
             <button type="reset">重置</button>
+            <button type="button">按钮</button>
         </form>
     </div>
 
